--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "scrollreveal": "^4.0.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
